Added code for Multiple Scenario Testing for AM